dist_man1_MANS=

if BUILD_MEWMINTD
  dist_man1_MANS+=bitcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoin-qt.1
endif

if BUILD_MEWMINT_CLI
  dist_man1_MANS+=bitcoin-cli.1
endif

if BUILD_MEWMINT_TX
  dist_man1_MANS+=bitcoin-tx.1
endif

if BUILD_MEWMINT_UTIL
  dist_man1_MANS+=bitcoin-util.1
endif

if ENABLE_WALLET
if BUILD_MEWMINT_WALLET
  dist_man1_MANS+=bitcoin-wallet.1
endif
endif
