include $(top_srcdir)/src/Makefile.include

AM_CPPFLAGS += $(BDB_CPPFLAGS)
AM_CPPFLAGS += -I$(top_srcdir)/src
AM_CPPFLAGS += -I$(top_builddir)/src/qt
AM_CPPFLAGS += $(QT_INCLUDES)
AM_CPPFLAGS += $(PROTOBUF_CFLAGS)

QT_DBUS_INCLUDES = -I$(srcdir)/dbus

QT_FORMS_UI =

QT_MOC_CPP =

QT_QRC_CPP =

BUILT_SOURCES =

# Placeholder for now - will be expanded as we add Qt functionality
bin_PROGRAMS =

CLEANFILES = $(BUILT_SOURCES) *.gcda *.gcno
